Complete Corgi Carousel.

--- a/carousel/css/carousel.css
+++ b/carousel/css/carousel.css
@@ -40,11 +40,11 @@ li {
 }
 
 .right {
-  /*position: absolute;*/
+  position: absolute;
   left: 100%;
 }
 
 .left {
-  /*position: absolute;*/
+  position: absolute;
   left: -100%;
 }
