--- a/thumbnails/css/thumbnails.css
+++ b/thumbnails/css/thumbnails.css
@@ -1,4 +1,4 @@
-html, body, div, img {
+html, body, a, div, img {
   border: 0;
   margin: 0;
   padding: 0;
@@ -29,4 +29,27 @@ html, body, div, img {
 
 div.active {
   width: 100%;
+}
+
+a.nav {
+  text-align: center;
+  width: 5%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 24px;
+}
+
+a.nav:last-child {
+  left: 95%;
+}
+
+.gutter-images {
+  width: 90%;
+  position: relative;
+  left: 5%;
+}
+
+.gutter {
+  position: relative;
 }
